Рефакторинг в PlayerOrderService getOrder и документация