@@ -11,12 +11,13 @@ import java.util.concurrent.Executors;
 
 /**
  * Сервис управления порядком игроков в конкретной игровой комнате.
- * <p>
- * Используется для:
+ *
+ * <p>Используется для:
  * <ul>
- *     <li>Фиксирования первых подключившихся игроков (определение ― кто "левый", кто "правый")</li>
- *     <li>Поддержки порядка при переподключениях</li>
- *     <li>Сохранения устойчивой позиции игрока в UI</li>
+ * <li>Фиксирования первых подключившихся игроков (определение ― кто "левый", кто "правый")</li>
+ * <li>Поддержки порядка при переподключениях</li>
+ * <li>Сохранения устойчивой позиции игрока в UI</li>
+ * <li>Обработки временного отключения (offline) и удаления игрока после таймаута.</li>
  * </ul>
  * <p>
  * Потокобезопасен благодаря {@link ConcurrentHashMap}, однако операции с {@link List}
@@ -34,14 +35,26 @@ public class PlayerOrderService {
      */
     private final Map<String, List<String>> orderMap = new ConcurrentHashMap<>();
 
+    /**
+     * Хранит имена игроков, которые временно отключились (оффлайн).
+     * <p>
+     * Ключ — gameCode комнаты.
+     * Значение — множество имён игроков, помеченных как оффлайн.
+     */
     private final Map<String, Set<String>> offlinePlayers = new ConcurrentHashMap<>();
+
+    /**
+     * Пул потоков для планирования задач отложенного удаления (таймаута).
+     * Использует виртуальные потоки для эффективного управления большим количеством задач.
+     */
     private final ExecutorService scheduler =
             Executors.newVirtualThreadPerTaskExecutor();
+
     /**
      * Добавляет игрока в порядок, если его ещё нет в списке.
-     * <p>
-     * Используется при первичном подключении и при переподключении
-     * (если игрок отсутствует — значит, он новый).
+     *
+     * <p>Используется при первичном подключении и при переподключении.
+     * Если игрок уже существует, его позиция в списке не меняется, что гарантирует стабильность порядка.</p>
      *
      * @param gameCode   код игровой комнаты
      * @param playerName имя игрока
@@ -56,6 +69,14 @@ public class PlayerOrderService {
         }
     }
 
+    /**
+     * Обрабатывает отключение игрока, помечая его как оффлайн и запуская таймер удаления.
+     *
+     * <p>Игрок не удаляется сразу, что дает ему время на переподключение (реконнект).</p>
+     *
+     * @param gameCode   код игровой комнаты
+     * @param playerName имя игрока, который отключился
+     */
     public void removePlayer(String gameCode, String playerName) {
         List<String> order = orderMap.get(gameCode);
         if (order != null && order.contains(playerName)) {
@@ -64,29 +85,59 @@ public class PlayerOrderService {
         }
     }
 
+    /**
+     * Помечает игрока как оффлайн в соответствующем хранилище.
+     *
+     * @param gameCode   код игровой комнаты
+     * @param playerName имя игрока
+     */
     private void markOffline(String gameCode, String playerName) {
         offlinePlayers.computeIfAbsent(gameCode, k -> new HashSet<>()).add(playerName);
         log.info("Игрок {} помечен offline в комнате {}", playerName, gameCode);
     }
 
+    /**
+     * Планирует удаление игрока через 30 секунд.
+     *
+     * <p>Если за это время игрок переподключится, задача удаления будет проигнорирована
+     * при финальной проверке.</p>
+     *
+     * @param gameCode   код игровой комнаты
+     * @param playerName имя игрока
+     * @param order      ссылка на список порядка (для упрощения доступа)
+     */
     private void scheduleRemoval(String gameCode, String playerName, List<String> order) {
         scheduler.submit(() -> {
             try {
                 Thread.sleep(Duration.ofSeconds(30).toMillis());
                 finalizeRemovalIfStillOffline(gameCode, playerName, order);
             } catch (InterruptedException e) {
+                log.warn("Планировщик удаления был прерван для игрока {} в комнате {}", playerName, gameCode);
                 Thread.currentThread().interrupt();
             }
         });
     }
 
+    /**
+     * Выполняет окончательное удаление игрока, если он все еще помечен как оффлайн.
+     *
+     * <p>Если список игроков после удаления становится пустым, комната также удаляется из {@code orderMap}.</p>
+     *
+     * @param gameCode   код игровой комнаты
+     * @param playerName имя игрока
+     * @param order      список порядка игроков для текущей комнаты
+     */
     private void finalizeRemovalIfStillOffline(String gameCode, String playerName, List<String> order) {
         if (isOffline(gameCode, playerName)) {
             order.remove(playerName);
+
+            // Удаляем игрока из набора оффлайн
             offlinePlayers.getOrDefault(gameCode, Set.of()).remove(playerName);
 
             if (order.isEmpty()) {
                 orderMap.remove(gameCode);
+                offlinePlayers.remove(gameCode); // Очищаем и оффлайн-карту для комнаты
+                log.info("Комната {} удалена, так как все игроки вышли.", gameCode);
             }
 
             log.info("Игрок {} удалён из комнаты {} после 30 секунд offline",
@@ -96,33 +147,55 @@ public class PlayerOrderService {
 
     /**
      * Проверяет, присутствует ли игрок в порядке комнаты.
-     * <p>
-     * Полезно при переподключении: если игрок уже был — позиция сохраняется.
+     *
+     * <p>Полезно при переподключении: если игрок уже был — его позиция сохраняется.</p>
      *
      * @param gameCode   код игровой комнаты
      * @param playerName имя игрока
-     * @return true — если игрок уже есть в списке
+     * @return {@code true} — если игрок уже есть в списке, иначе {@code false}.
      */
     public boolean contains(String gameCode, String playerName) {
         return orderMap.getOrDefault(gameCode, List.of()).contains(playerName);
     }
 
+    /**
+     * Проверяет, помечен ли игрок как временно отключенный (оффлайн).
+     *
+     * @param gameCode   код игровой комнаты
+     * @param playerName имя игрока
+     * @return {@code true} — если игрок находится в наборе оффлайн, иначе {@code false}.
+     */
     public boolean isOffline(String gameCode, String playerName) {
         return offlinePlayers.getOrDefault(gameCode, Set.of()).contains(playerName);
     }
 
+    /**
+     * Помечает игрока как онлайн, удаляя его из набора оффлайн игроков.
+     *
+     * <p>Используется при успешном переподключении, отменяя запланированное удаление.</p>
+     *
+     * @param gameCode   код игровой комнаты
+     * @param playerName имя игрока
+     */
     public void markOnline(String gameCode, String playerName) {
         Set<String> offline = offlinePlayers.get(gameCode);
-        if (offline != null) offline.remove(playerName);
+        if (offline != null) {
+            boolean wasOffline = offline.remove(playerName);
+            if (wasOffline) {
+                log.info("Игрок {} успешно переподключился (markOnline) к комнате {}", playerName, gameCode);
+            }
+        }
     }
 
     /**
      * Возвращает текущий порядок игроков (неизменяемый список).
      *
      * @param gameCode код игровой комнаты
-     * @return порядок игроков или пустой список, если комнаты нет
+     * @return неизменяемый список имён игроков в порядке подключения или пустой список, если комнаты нет.
      */
     public List<String> getOrder(String gameCode) {
-        return orderMap.getOrDefault(gameCode, List.of());
+        // Возвращаем неизменяемую копию для предотвращения внешних модификаций
+        List<String> order = orderMap.get(gameCode);
+        return order != null ? Collections.unmodifiableList(order) : List.of();
     }
 }
